@@ -24,6 +24,8 @@ Post-v3.6.0
    - ovs-appctl:
      * 'ovs/route/show': added new option, table=[ID|all], to list routes from
        a specific table or all routes from all tables.
+     * 'ovs/route/add' and 'ovs/route/del': added new option, table=ID, to
+       add/delete a route from a specific table.
      * Added a new sub-command, ovs/route/rule/show, to list OVS routing rules.
    - Windows Support
      * Support for compiling for and running on Windows has been deprecated.
